public/css/application.css
body {
	font-family: 'Open Sans', sans-serif;
	background-color: #f8f8f8;
	padding-top: 50px;
}

.navbar-default {
	background-color: #d5e9fe;
	box-shadow: 0px 2px 2px #efefef;
}

.navbar-default .navbar-brand {
	color: #414042;
	font-weight: 600;
	font-size: 150%;
}

h1 {
	color: #a4abb1;
	font-size: 220%;
	font-weight: 600;
}

.header {
	padding-top: 0;
	padding-bottom: 0;
}

a {
	color: #41a3fe;
}

h2.hook a {
	font-weight: 600;
	font-size: 100%;
}

.hook .info {
	color: #63c976;
	font-size: 70%;
	margin-left: 1em;
}

.hook .info small {
	font-size: 70%;
}

.axis path {
	fill: none;
	stroke: #cbcfdc;
	stroke-width: 1.5px;
	shape-rendering: crispEdges;
}

.axis text {
	font-family: sans-serif;
	font-size: 11px;
	fill: #777;
}

.graph {
	overflow: hidden;
	width: 100%;
	height: 80px;
	padding: 0.5em 0;
}

.graph rect {
	fill: #63c976;
}

.graph rect:hover {
	fill: #52af56;
}

.graph-footer {
	color: #777;
}

.component-arrow {
	color: #eee;
	font-size: 4em;
	margin: -10px 0 0 0;
}

hr {
	margin-top: 2em;
	margin-bottom: 2em;
}

.d3-tip {
	line-height: 1;
	font-weight: bold;
	font-size: 90%;
	padding: 12px;
	background: #414042;
	color: #fff;
	border-radius: 2px;
}

.d3-tip:after {
	box-size: border-box;
	display: inline;
	font-size: 10px;
	width: 100%;
	line-height: 1;
	color: #414042;
	content: "\25BC";
	position: absolute;
	text-align: center;
}

.d3-tip.n:after {
	margin: -3px 0 0 0;
	top: 100%;
	left: 0;
}

